[gd_scene load_steps=5 format=2]

[ext_resource path="res://Misc/Firebar.gd" type="Script" id=1]
[ext_resource path="res://GFX/Tileset/SMB1Tileset_Customized.png" type="Texture" id=2]
[ext_resource path="res://Misc/gfx/Firebar.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="Firebar" type="KinematicBody2D"]
collision_mask = 65
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="KinematicCollision" type="CollisionShape2D" parent="."]
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 1 )
disabled = true

[node name="BlockSprite" type="Sprite" parent="."]
visible = false
z_index = 1
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 432, 0, 16, 16 )

[node name="Fire" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="FireSprite" type="Sprite" parent="Fire"]
position = Vector2( 20, 0 )
z_index = 1
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 48, 8 )

[node name="FireCollision" type="CollisionShape2D" parent="Fire"]
position = Vector2( 20, 0 )
scale = Vector2( 2.4, 0.4 )
shape = SubResource( 1 )
[connection signal="area_entered" from="Fire" to="." method="_on_Fire_area_entered"]
